@@ -4,6 +4,7 @@ master
 * Adapters::Daybreak: add option :sync to load and store
 * Adapters::LRUHash: add option :max_count
 * Adapters::Mongo: add options :user and :password
+* Adapters::Mongo: Correctly close connections
 * Transformer: add inspect key transformer
 * Added #create method to atomically create entries
 * Added WeakCreate and WeakIncrement proxies
